<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemMultiselectTag"
        android:title="ADD TAGS"
        android:contentDescription="Add a tags to all selected items"
        android:icon="@drawable/ic_tag_button_24dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/itemMultiselectDelete"
        android:title="DELETE ALL"
        android:contentDescription="Delete all selected items"
        android:icon="@drawable/ic_delete_button_24dp"
        app:showAsAction="always"
        />

...
