...

            <Button
                android:id="@+id/Asc"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASC">

            </Button>

            <Button
                android:id="@+id/Desc"
                style="?attr/materialButtonOutlinedStyle"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sortButtonGroup"
            >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:layout_anchorGravity="center" />

        </com.google.android.material.textfield.TextInputLayout>
...
